# geist

./: .gitignore  App.tsx  CLAUDE.md  README.md  app.json  cesconfig.jsonc  cleanup-logs.js  metro.config.js  package-lock.json  package.json  plan.md  plan.txt  test-gpt-oss-fixes.sh
.claude/: settings.json
backend/: DOCKER.md  plan.md  start-backend-dev.sh  start-backend.sh
backend/llm-router/: .coverage  .env.development  .env.production  Makefile  README-HOWTO.md  config.py  create_hpke_request.py  debug_hpke_direct.py  decode_hpke_response.py  deploy-prod.sh  llama-inference.service  main.py  models.py  pyproject.toml  start-dev.sh  start-prod.sh  switch-env.sh  test_config_management.py  test_direct_inference.py  test_hpke_end_to_end.py  test_hpke_implementation.py  test_inference_endpoint.py  validate_step9_implementation.py
backend/llm-router/docs/: configuration-guide.md  network-security-guide.md
backend/llm-router/middleware/: logging_middleware.py  secure_logging.py
backend/llm-router/scripts/: setup-security-users.sh  verify-network-config.sh
backend/llm-router/services/: circuit_breaker.py  health_monitor.py  hpke_service.py  inference_client.py  inference_service.py  rate_limiter.py
backend/llm-router/systemd/: llama-inference-hardened.service  llm-router-hardened.service
backend/llm-router/tests/: conftest.py  pytest.ini  run_tests.py  test_hpke_unit.py  test_integration_e2e.py
backend/llm-router/tests/load/: k6-load-test.js  locust-load-test.py  run-load-tests.sh
components/: ChatList.tsx  Container.tsx  InputBar.tsx  MessageBubble.tsx  (+1 more)
(+97 files in other folders)
